; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_source_layered.c_zip_source_layered.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_source_layered.c_zip_source_layered.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip = type { i32 }
%struct.zip_source = type { i8*, %struct.TYPE_2__, %struct.zip_source* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.zip_source* @zip_source_layered(%struct.zip* %0, %struct.zip_source* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.zip_source*, align 8
  %6 = alloca %struct.zip*, align 8
  %7 = alloca %struct.zip_source*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.zip_source*, align 8
  store %struct.zip* %0, %struct.zip** %6, align 8
  store %struct.zip_source* %1, %struct.zip_source** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = load %struct.zip*, %struct.zip** %6, align 8
  %12 = icmp eq %struct.zip* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %4
  store %struct.zip_source* null, %struct.zip_source** %5, align 8
  br label %31

14:                                               ; preds = %4
  %15 = load %struct.zip*, %struct.zip** %6, align 8
  %16 = call %struct.zip_source* @_zip_source_new(%struct.zip* %15)
  store %struct.zip_source* %16, %struct.zip_source** %10, align 8
  %17 = icmp eq %struct.zip_source* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store %struct.zip_source* null, %struct.zip_source** %5, align 8
  br label %31

19:                                               ; preds = %14
  %20 = load %struct.zip_source*, %struct.zip_source** %7, align 8
  %21 = load %struct.zip_source*, %struct.zip_source** %10, align 8
  %22 = getelementptr inbounds %struct.zip_source, %struct.zip_source* %21, i32 0, i32 2
  store %struct.zip_source* %20, %struct.zip_source** %22, align 8
  %23 = load i32, i32* %8, align 4
  %24 = load %struct.zip_source*, %struct.zip_source** %10, align 8
  %25 = getelementptr inbounds %struct.zip_source, %struct.zip_source* %24, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  store i32 %23, i32* %26, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load %struct.zip_source*, %struct.zip_source** %10, align 8
  %29 = getelementptr inbounds %struct.zip_source, %struct.zip_source* %28, i32 0, i32 0
  store i8* %27, i8** %29, align 8
  %30 = load %struct.zip_source*, %struct.zip_source** %10, align 8
  store %struct.zip_source* %30, %struct.zip_source** %5, align 8
  br label %31

31:                                               ; preds = %19, %18, %13
  %32 = load %struct.zip_source*, %struct.zip_source** %5, align 8
  ret %struct.zip_source* %32
}

declare dso_local %struct.zip_source* @_zip_source_new(%struct.zip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
